API connection established + beginning to structure webpage

--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js" defer></script>
     <link rel = "stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="main-box">
+        <div id="header">
+            <div id="header-decoration">
+
+            </div> 
+            <form action="" id="input-form">
+                <input type="text" id="input-box">
+                <button id="submit-button">
+                    Submit
+                </button>
+            </form>
+        </div>
+        <div id="main-content">
+            <div id="top-half">
+                <div id="current-weather">
+
+                </div>
+            </div>
+           <div id="bottom-half">
+            <div id="weather-tomorrow">
+
+            </div>
+            <div id="weather-overmorrow">
+
+            </div>
+           </div>
+            
+        </div>
+    </div>
     
 </body>
 </html>
